--- a/relatorio.tex
+++ b/relatorio.tex
@@ -333,49 +333,104 @@ Além de apresentar um aquecimento incremental, a política de perfilamento orig
 
 Buscando melhorar a abordagem de perfilamento adotada pelo RAIn, desenvolvemos duas técnicas de resfriamento do \emph{profiler}, o \emph{full reset} e o \emph{partial reset}. A técnica de \emph{full reset} consiste em resetar todos endereços perfilados sempre que uma região é criada. Isso garante que somente as regiões que são utilizadas muito frequentemente, em fases específicas do programa, consigam atingir o limiar mínimo necessário para serem consideradas quentes. Já as técnicas de \emph{partial reset}, reinicializa somente os contadores dos endereços que são alvos de salto e fazem parte das regiões. Isto garante que após a remoção de uma região, essa, por sua vez, só  poderá ser inserida novamente na \cache~quando atingir o limiar de aquecimento imposto pelo \emph{profiler}.
 
-Com base nos experimentos realizados, verificamos que o total de traduções geradas pelo NET, na ausência de \cache~e fazendo uso da política original de perfilamento, é superior a taxa de traduções quando aplicamos algumas das técnicas de resfriamento sugeridas. Entretanto, na presença de \cache, a formação de regiões passa a ser afetada pela política de gerenciamento de \cache, sempre que há uma necessidade de liberar espaços para novas traduções. Assim, quanto maior a pressão sobre a \cache, mais regiões serão removidas, e consequentemente, mais instruções serão retraduzidas. Este efeito pode ser visualizado na Figura {\large Qual?}, onde a medida que a pressão sobre a \cache~cresce, o número total de instruções traduzidas aumenta. Contudo, este aumento é muito menor quando o perfilamento utiliza algumas das políticas de resfriamento sugeridas.
+Com base nos experimentos realizados, verificamos que o total de traduções geradas pelo NET, na ausência de \cache~e fazendo uso da política original de perfilamento, é superior a taxa de traduções quando aplicamos algumas das técnicas de resfriamento sugeridas. Entretanto, na presença de \cache, a formação de regiões passa a ser afetada pela política de gerenciamento de \cache, sempre que há uma necessidade de liberar espaços para novas traduções. Assim, quanto maior a pressão sobre a \cache, mais regiões serão removidas, e consequentemente, mais instruções serão retraduzidas. Este efeito pode ser visualizado na Figura \ref{fig-milc-trans-freq}~, onde a medida que a pressão sobre a \cache~cresce, o número total de instruções traduzidas aumenta. Contudo, este aumento é muito menor quando o perfilamento utiliza algumas das políticas de resfriamento sugeridas.
 
-\begin{large}
-NOVAMENTE FIGURA! O INTERESSANTE EH TER TODAS NO MESMO FORMATO!
-\end{large}
-
-
-É interessante notar, que apesar da redução do número total de traduções, a taxa de cobertura com o uso de um \emph{partial reset} é bem próxima da obtida pela política sem reset. Isso se deve ao fato, que o código gerado passa a apresentar uma taxa de completude muito superior, à medida que a pressão da \cache~aumenta, conforme visualizado na figura {\large Qual?}. Isso significa que com o resfriamento do \emph{profiler} as regiões são executadas completamente com uma maior frequência.
-
-
-
-\subsection{NET e as políticas de gerenciamento de \emph{cache}}
-\begin{large}
-COLOCAR DEPOIS
-\end{large}
-
-\begin{large}
-ABAIXO AS FIGURAS \ref{fig-num_regs}, \ref{fig-completude1} e \ref{fig-cobertura1} QUE COLOQUEI COMO MODELO, DEPOIS COMPLETAMOS AS OUTRAS
-\end{large}
-
-\begin{figure}[h!]
-\includegraphics[scale=0.4]{./figs/regions-number}
-\caption{Número de regiões.}
-\label{fig-num_regs}
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.4]{./figs/reset-translate-inst}
+\caption{Número de instruções traduzidas para a aplicação \emph{milc}.}
+\label{fig-milc-trans-freq}
 \end{figure}
 
-Agora, 2 figuras lado a lado !
+É interessante notar, que apesar da redução do número total de traduções, a taxa de cobertura com o uso de um \emph{partial reset} é bem próxima da obtida pela política sem reset. Isso se deve ao fato, que o código gerado passa a apresentar uma taxa de completude muito superior, à medida que a pressão da \cache~aumenta, conforme visualizado nas Figuras \ref{fig-completude1} e  \ref{fig-cobertura1}. Isso significa que com o resfriamento do \emph{profiler} as regiões são executadas completamente com uma maior frequência.
 
-\begin{figure}[h!]
+\begin{figure}[!ht]
         \centering
         \begin{subfigure}[b]{0.45\textwidth}
-                \includegraphics[width=\textwidth]{./figs/completion-reset}
+                \includegraphics[width=\textwidth]{./figs/reset-completion-ratio}
                 \caption{Completude}
                 \label{fig-completude1}
         \end{subfigure}
         \quad %esapcço entre figuras - poderia ser \qquad ou nada...ou mais 100000 de coisas kkkkkkk
                 \begin{subfigure}[b]{0.45\textwidth}
-                \includegraphics[width=\textwidth]{./figs/region-coverage-reset}
+                \includegraphics[width=\textwidth]{./figs/reset-dynamic-cov}
                 \caption{Cobertura}
                 \label{fig-cobertura1}
         \end{subfigure}
-\caption{Dois graficos lado-a-lado...}
+\caption{Avaliação profiler utilizando a técnica NET e a aplicação \emph{milc}.}
 \end{figure}
+
+
+\subsection{Impacto de Técnicas de Formação de Regiões no Gerenciamento de \emph{Code Cache}}
+
+\begin{figure}[!ht]
+        \centering
+        \begin{subfigure}[b]{0.45\textwidth}
+                \includegraphics[width=\textwidth]{./figs/net-bwaves-freq-int}
+                \caption{NET}
+                \label{fig-net-bwaves-freq-int}
+        \end{subfigure}
+        \quad %esapcço entre figuras - poderia ser \qquad ou nada...ou mais 100000 de coisas kkkkkkk
+                \begin{subfigure}[b]{0.45\textwidth}
+                \includegraphics[width=\textwidth]{./figs/mret-bwaves-freq-int}
+                \caption{MRET}
+                \label{fig-mret-bwaves-freq-int}
+        \end{subfigure}
+\caption{Número de instruções emuladas por interpretação na aplicação \emph{bwaves}.}
+\end{figure}
+
+
+
+\begin{figure}[!ht]
+        \centering
+        \begin{subfigure}[b]{0.45\textwidth}
+                \includegraphics[width=\textwidth]{./figs/net-bwaves-average-reg-size}
+                \caption{NET}
+                \label{fig-net-bwaves-average-reg-size}
+        \end{subfigure}
+        \quad %esapcço entre figuras - poderia ser \qquad ou nada...ou mais 100000 de coisas kkkkkkk
+                \begin{subfigure}[b]{0.45\textwidth}
+                \includegraphics[width=\textwidth]{./figs/mret-bwaves-average-reg-size}
+                \caption{MRET}
+                \label{fig-mret-bwaves-average-reg-size}
+        \end{subfigure}
+\caption{Tamanho estático médios das regiões para a aplicação \emph{bwaves}.}
+\end{figure}
+
+\begin{figure}[!ht]
+        \centering
+        \begin{subfigure}[b]{0.45\textwidth}
+                \includegraphics[width=\textwidth]{./figs/net-bwaves-comp-ratio}
+                \caption{NET}
+                \label{fig-net-bwaves-comp-ratio}
+        \end{subfigure}
+        \quad %esapcço entre figuras - poderia ser \qquad ou nada...ou mais 100000 de coisas kkkkkkk
+                \begin{subfigure}[b]{0.45\textwidth}
+                \includegraphics[width=\textwidth]{./figs/mret-bwaves-comp-ratio}
+                \caption{MRET}
+                \label{fig-mret-bwaves-comp-ratio}
+        \end{subfigure}
+\caption{Taxa de completudes das regiões para a aplicação \emph{bwaves}.}
+\end{figure}
+
+\begin{figure}[!ht]
+        \centering
+        \begin{subfigure}[b]{0.45\textwidth}
+                \includegraphics[width=\textwidth]{./figs/net-bwaves-tot-regions}
+                \caption{NET}
+                \label{fig-net-bwaves-tot-regions}
+        \end{subfigure}
+        \quad %esapcço entre figuras - poderia ser \qquad ou nada...ou mais 100000 de coisas kkkkkkk
+                \begin{subfigure}[b]{0.45\textwidth}
+                \includegraphics[width=\textwidth]{./figs/mret-bwaves-tot-regions}
+                \caption{MRET}
+                \label{fig-mret-bwaves-tot-regions}
+        \end{subfigure}
+\caption{Número total de regiões para a aplicação \emph{bwaves}.}
+\end{figure}
+
+
+
 
 \newpage
 
